--- a/elements/cg-renderer.html
+++ b/elements/cg-renderer.html
@@ -102,14 +102,8 @@
                 renderer.createSmartGroup(_id, name);
             },
 
-            createBlock: function (name, position) {
-                var _id = this.graph.getNextBlockId();
-                var model = this.graph.getModel(name);
-                if (model !== undefined) {
-                    this.graph.addEntity(new cg.Block(_id, model, position), this.graph);
-                } else {
-                    this.fire("error", {error: new pandora.Exception("Model {0} not found", name)});
-                }
+            createBlock: function (model, position) {
+                this.graph.addEntity(new cg.Block(this.graph.getNextBlockId(), model, position), this.graph);
             },
 
             removeSelection: function () {
