Refactore toolbar command with template repeat

--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -29,46 +29,13 @@
                     flex>
             <dude-toolbar id="toolbar">
                 <div data-state="root" layout horizontal justified>
-                    <dude-toolbar-command name="openGraph"
-                                          label="open another graph"
-                                          icon="open-in-new"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="save"
-                                          label="save the graph"
-                                          icon="save"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="openGroup"
-                                          label="add a group"
-                                          icon="av:my-library-add"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="openAction"
-                                          label="add an action"
-                                          icon="add-box"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="openPicker"
-                                          label="add a picker"
-                                          icon="add-circle"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="edit"
-                                          label="edit the selected object"
-                                          icon="create"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="removeSelection"
-                                          label="remove the selected groups and blocks"
-                                          icon="delete"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
-                    <dude-toolbar-command name="zoomToFit"
-                                          label="zoom to best fit all elements"
-                                          icon="image:crop-free"
-                                          on-trigger="{{runCommand}}">
-                    </dude-toolbar-command>
+                    <template repeat="{{command in _commands}}">
+                        <dude-toolbar-command name="{{command.name}}"
+                                              label="{{command.label}}"
+                                              icon="{{command.icon}}"
+                                              on-trigger="{{runCommand}}">
+                        </dude-toolbar-command>
+                    </template>
                 </div>
                 <dude-toolbar-input name="createGroup"
                                     data-state="group"
@@ -135,6 +102,16 @@
     </template>
     <script>
         Polymer({
+            _commands: [
+                {name: "openGraph", label: "open another graph", icon: "open-in-new"},
+                {name: "saveGraph", label: "save the graph", icon: "save"},
+                {name: "openGroup", label: "add a group", icon: "av:my-library-add"},
+                {name: "openAction", label: "add an action", icon: "add-box"},
+                {name: "openPicker", label: "add a picker", icon: "add-circle"},
+                {name: "editEntity", label: "edit the selected object", icon: "create"},
+                {name: "removeSelection", label: "remove all the selected objects", icon: "delete"},
+                {name: "zoomToFit", label: "zoom to best fit all objects", icon: "image:crop-free"}
+            ],
             _pickerType: "Unknown",
             _pickerValue: "Undefined",
             runCommand: function (event, detail) {
