--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -14,6 +14,9 @@
 <link rel="import" href="../bower_components/dude-gui/dude-toolbar.html">
 <link rel="import" href="../bower_components/dude-gui/dude-toolbar-command.html">
 <link rel="import" href="../bower_components/dude-gui/dude-toolbar-input.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-dropdown/paper-dropdown.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="cg-renderer.html">
 <polymer-element name="cg-app" attributes="logo theme graphUrl" extends="dude-config">
     <template>
@@ -26,22 +29,26 @@
             dude-sidebar [data-state] {
                 width: 200px;
             }
-            core-dropdown-menu {
+            paper-dropdown-menu {
                 width: 100%;
                 box-sizing: border-box;
                 outline: none;
                 background: transparent;
             }
-            core-dropdown {
+            paper-dropdown {
                 border-radius: 3px;
                 box-sizing: border-box;
                 min-width: 200px;
             }
-            core-item {
+            paper-item {
                 overflow: hidden;
                 white-space: nowrap;
                 color: #444;
                 text-overflow: ellipsis;
+            }
+            .panel-splitter {
+                background: rgb(243, 156, 18);
+                width: 3px;
             }
         </style>
         <dude-panel id="panel"
@@ -99,15 +106,24 @@
                 </div>
                 <div data-state="picker">
                     <div>
-                        <core-dropdown-menu label="{{_pickerType}}" selected="{{_pickerType}}">
-                            <core-dropdown class="dropdown">
-                                <core-menu>
+                        <paper-dropdown-menu label="{{_pickerType}}" core-select="{{_pickerTypeChanged}}">
+                            <paper-dropdown selected="{{_pickerType}}" class="dropdown">
+                                <core-menu class="menu">
                                     <template repeat="{{type in _pickerTypes}}">
-                                        <core-item>{{type}}</core-item>
+                                        <paper-item>{{type}}</paper-item>
                                     </template>
                                 </core-menu>
-                            </core-dropdown>
-                        </core-dropdown-menu>
+                            </paper-dropdown>
+                        </paper-dropdown-menu>
+                        <!--<core-dropdown-menu label="{{_pickerType}}" selected="{{_pickerType}}">-->
+                            <!--<core-dropdown class="dropdown">-->
+                                <!--<core-menu>-->
+                                    <!--<template repeat="{{type in _pickerTypes}}">-->
+                                        <!--<core-item>{{type}}</core-item>-->
+                                    <!--</template>-->
+                                <!--</core-menu>-->
+                            <!--</core-dropdown>-->
+                        <!--</core-dropdown-menu>-->
                     </div>
                     <!--<div>-->
                         <!--<input is="core-input"-->
@@ -132,16 +148,16 @@
                          content>
             </cg-renderer>
         </dude-panel>
-        <!--<core-splitter class="panel-splitter" direction="right"></core-splitter>-->
-        <!--<dude-panel name="audio-editor" styleUrl="themes/{{theme}}/panel.css">-->
-        <!--<dude-toolbar root="hello">-->
-        <!--<div data-state="hello">-->
-        <!--Audio Editor-->
-        <!--</div>-->
-        <!--</dude-toolbar>-->
-        <!--<dude-sidebar>Here comes the tools.</dude-sidebar>-->
-        <!--<div content flex>Here comes some edition content</div>-->
-        <!--</dude-panel>-->
+        <core-splitter class="panel-splitter" direction="right"></core-splitter>
+        <dude-panel name="audio-editor" styleUrl="themes/{{theme}}/panel.css">
+        <dude-toolbar root="hello">
+        <div data-state="hello">
+        Audio Editor
+        </div>
+        </dude-toolbar>
+        <dude-sidebar>Here comes the tools.</dude-sidebar>
+        <div content flex>Here comes some edition content</div>
+        </dude-panel>
         <paper-toast class="notification" id="error"></paper-toast>
         <paper-toast class="notification" id="success"></paper-toast>
     </template>
@@ -287,6 +303,9 @@
                     isInput: false,
                     type: this._pickerType
                 });
+            },
+            _pickerTypeChanged: function (event) {
+                console.log(this._pickerType, event);
             }
         });
     </script>
