New polymer structure

--- a/cg-app.html
+++ b/cg-app.html
@@ -1,22 +1,22 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../bower_components/core-splitter/core-splitter.html">
-<link rel="import" href="../bower_components/core-icons/av-icons.html">
-<link rel="import" href="../bower_components/core-icons/image-icons.html">
-<link rel="import" href="../bower_components/core-dropdown-menu/core-dropdown-menu.html">
-<link rel="import" href="../bower_components/core-dropdown/core-dropdown.html">
-<link rel="import" href="../bower_components/core-collapse/core-collapse.html">
-<link rel="import" href="../bower_components/core-menu/core-menu.html">
-<link rel="import" href="../bower_components/core-item/core-item.html">
-<link rel="import" href="../bower_components/dude-gui/dude-panel.html">
-<link rel="import" href="../bower_components/dude-gui/dude-config.html">
-<link rel="import" href="../bower_components/dude-gui/dude-sidebar.html">
-<link rel="import" href="../bower_components/dude-gui/dude-toolbar.html">
-<link rel="import" href="../bower_components/dude-gui/dude-toolbar-command.html">
-<link rel="import" href="../bower_components/dude-gui/dude-toolbar-input.html">
-<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bower_components/paper-dropdown/paper-dropdown.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../paper-toast/paper-toast.html">
+<link rel="import" href="../core-splitter/core-splitter.html">
+<link rel="import" href="../core-icons/av-icons.html">
+<link rel="import" href="../core-icons/image-icons.html">
+<link rel="import" href="../core-dropdown-menu/core-dropdown-menu.html">
+<link rel="import" href="../core-dropdown/core-dropdown.html">
+<link rel="import" href="../core-collapse/core-collapse.html">
+<link rel="import" href="../core-menu/core-menu.html">
+<link rel="import" href="../core-item/core-item.html">
+<link rel="import" href="../dude-gui/dude-panel.html">
+<link rel="import" href="../dude-gui/dude-config.html">
+<link rel="import" href="../dude-gui/dude-sidebar.html">
+<link rel="import" href="../dude-gui/dude-toolbar.html">
+<link rel="import" href="../dude-gui/dude-toolbar-command.html">
+<link rel="import" href="../dude-gui/dude-toolbar-input.html">
+<link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../paper-dropdown/paper-dropdown.html">
+<link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="cg-renderer.html">
 <polymer-element name="cg-app" attributes="logo theme graphUrl" extends="dude-config">
     <template>
