--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>CodeGraph</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <script src="../webcomponentsjs/webcomponents.js"></script>
+    <link rel="stylesheet" href="index.css">
     <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cherry+Cream+Soda' rel='stylesheet' type='text/css'>
-    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
-    <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="elements/cg-app.html">
+    <link rel="import" href="../core-drawer-panel/core-drawer-panel.html">
+    <link rel="import" href="../core-header-panel/core-header-panel.html">
+    <link rel="import" href="../core-toolbar/core-toolbar.html">
+    <link rel="import" href="cg-app.html">
     <style>
         core-toolbar {
             background: rgb(243, 156, 18);
