--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -148,16 +148,14 @@
                          content>
             </cg-renderer>
         </dude-panel>
-        <core-splitter class="panel-splitter" direction="right"></core-splitter>
-        <dude-panel name="audio-editor" styleUrl="themes/{{theme}}/panel.css">
-        <dude-toolbar root="hello">
-        <div data-state="hello">
-        Audio Editor
-        </div>
-        </dude-toolbar>
-        <dude-sidebar>Here comes the tools.</dude-sidebar>
-        <div content flex>Here comes some edition content</div>
-        </dude-panel>
+        <!--<core-splitter class="panel-splitter" direction="right"></core-splitter>-->
+        <!--<dude-panel name="audio-editor" styleUrl="themes/{{theme}}/panel.css">-->
+            <!--<dude-toolbar root="hello">-->
+                <!--<div data-state="hello">Audio Editor</div>-->
+            <!--</dude-toolbar>-->
+            <!--<dude-sidebar>Here comes the tools.</dude-sidebar>-->
+            <!--<div content flex>Here comes some edition content</div>-->
+        <!--</dude-panel>-->
         <paper-toast class="notification" id="error"></paper-toast>
         <paper-toast class="notification" id="success"></paper-toast>
     </template>
