--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
     <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cherry+Cream+Soda' rel='stylesheet' type='text/css'>
+    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
     <link rel="import" href="elements/cg-app.html">
@@ -22,19 +22,36 @@
         core-toolbar span {
             font-family: "Lato", sans-serif;
         }
+        [drawer] {
+            font-family: "Lato", sans-serif;
+            background: #222;
+            color: #eee;
+        }
     </style>
 </head>
 <body vertical layout fullbleed unresolved>
-    <core-header-panel layout horizontal flex>
-        <core-toolbar id="mainheader" layout horizontal>
-            <paper-icon-button icon="menu"></paper-icon-button>
-            <span flex>Audigame</span>
-        </core-toolbar>
-        <cg-app logo="images/dude_logo_dark.png"
-                graphUrl="examples/audigame.json"
-                theme="audigame"
-                layout horizontal fit>
-        </cg-app>
-    </core-header-panel>
+    <core-drawer-panel>
+        <core-header-panel main layout horizontal flex>
+            <core-toolbar id="mainheader" layout horizontal>
+                <paper-icon-button id="menu-btn" icon="menu" core-drawer-toggle></paper-icon-button>
+                <span flex>Audigame</span>
+            </core-toolbar>
+            <cg-app logo="images/dude_logo_dark.png"
+                    graphUrl="examples/audigame.json"
+                    theme="audigame"
+                    layout horizontal fit>
+            </cg-app>
+        </core-header-panel>
+        <div drawer>
+            <core-menu>
+                <core-item label="Home" icon="home"></core-item>
+                <core-item label="Editor" icon="create"></core-item>
+                <core-item label="Account" icon="account-circle"></core-item>
+                <core-item label="Contact" icon="send"></core-item>
+            </core-menu>
+        </div>
+    </core-drawer-panel>
+    <script>
+    </script>
 </body>
 </html>
